k8s/06-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: uptime-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: ecr-registry-credentials
      containers:
        - name: worker
          image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/uptime-monitor-worker:<IMAGE_TAG>
          imagePullPolicy: Always
          command:
            [
              "celery",
              "-A",
              "src.celery_app",
              "worker",
              "--loglevel=info",
              "--concurrency=4",
            ]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 300Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beat
  namespace: uptime-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beat
  template:
    metadata:
      labels:
        app: beat
    spec:
      imagePullSecrets:
        - name: ecr-registry-credentials
      containers:
        - name: beat
          image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/uptime-monitor-worker:<IMAGE_TAG>
          imagePullPolicy: Always
          command: ["celery", "-A", "src.celery_app", "beat", "--loglevel=info"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
