k8s/05-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: uptime-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: ecr-registry-credentials
      containers:
        - name: api
          image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/uptime-monitor-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: uptime-monitor
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
